--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </header>
     <main>
         <div class="container">
+            <div class="lds-hourglass"></div>
             <div class="section intro">
                 <div class="intro__icon">
                     <i class="far fa-laugh-wink"></i>
@@ -110,12 +111,12 @@
             <h2 class="thankyou_title"></h2>
         </div>
         <div class="popup__content">
+            <div class="loading" id="loader">
+                <div></div>
+            </div>
             <p class="thankyou_content"></p>
-            <button style="display:none" class="btn btn-primary" type="button" disabled >
-                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                Loading...
-              </button>
-              <button class="btn btn-primary thankyou_btn" type="button" onclick="refeshPage();"></button>
+            <button class="btn btn-primary thankyou_btn" type="button" onclick="refeshPage();"></button>
+            
         </div>
 
         <div class="popup__footer">
@@ -123,7 +124,21 @@
         </div>
     </div>
 
-    
+    <div class="wrapper">
+        <div id="toast">
+            <div class="container-1">
+                <i class="fas fa-check-square"></i>
+            </div>
+            <div class="container-2">
+                <p class="toast__title">WARNING</p>
+                <p class="toast__content"></p>
+            </div>
+            <button id="close" onclick="closeToast()">
+                &times;
+            </button>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
 </body>
